# chatroom

./: .gitignore  CMakeLists.txt  CTestTestfile.cmake  DEPLOY.md  Doxyfile  QUICKSTART.md  README.md  STRUCTURE.md  TESTING.md  deploy_client.sh  deploy_server.sh  package.sh  start_client.sh  start_server.sh  stop_client.sh  stop_server.sh  stress_test_clients.sh
.cache/clangd/index/: acceptor.cpp.E799F51486027A6B.idx  acceptor.h.8BBA0F649F868B72.idx  channel.cpp.DFC7A7747FB85DCA.idx  channel.h.C56272E9C669C908.idx  chatroom_client.cpp.1C48F60C48085939.idx  chatroom_client.h.9EFF25B694AA4703.idx  chatroom_server.cpp.55403CAD5AD339F3.idx  chatroom_server.h.17AB34B7500C88A7.idx  client_config.cpp.5B2518E31CDC0800.idx  client_config.h.684CDC7726819A90.idx  client_main.cpp.6F4979C19B6F69C3.idx  event_loop.cpp.6125D083BBA40A10.idx  event_loop.h.71B289C16AEB8126.idx  http_codec.cpp.6815A4E7886D3197.idx  http_codec.h.86F01D25F3AC6687.idx  http_server.cpp.19D7F0AA3E9218D0.idx  http_server.h.457EA855E249787A.idx  integration_test.cpp.ABD61E71D19B2C2A.idx  json_utils.h.075A28E574EF3C6F.idx  logger.cpp.89C51B6E2086E4A9.idx  logger.h.B68069EADE8647D4.idx  server_main.cpp.2324B9A6A46CB994.idx  server_test.cpp.A49504113F3D742C.idx  stream_logger.cpp.A33A29159F1900AB.idx  stream_logger.h.E2F39D59A86FC06C.idx  tcp_connection.cpp.748FAB8DACA18270.idx  tcp_connection.h.A7941C00B6B1D67B.idx  thread_pool.cpp.3AFC46DBEA2B0ADD.idx  thread_pool.h.B80567EECD20FB32.idx
base/: CMakeLists.txt  CTestTestfile.cmake
base/include/: chat_message.h  database.h  database_config.h  database_manager.h  logger.h  mysql_database.h  sqlite_database.h  stream_logger.h
base/src/: database_manager.cpp  logger.cpp  mysql_database.cpp  sqlite_database.cpp  stream_logger.cpp
canvas/: main.txt  personalInformation
client/: CMakeLists.txt  CTestTestfile.cmake
client/conf/: client.yaml
client/include/: chatroom_client.h  client_config.h
client/src/: chatroom_client.cpp  client_config.cpp  client_main.cpp
client_web/: README.md  index.html
client_web/src/: App.jsx
client_web/src/components/: ChatInterface.jsx  Login.jsx  Settings.jsx
docs/html/: acceptor_8h.html  acceptor_8h_source.html  annotated.html  channel_8h.html  channel_8h_source.html  chatroom__server_8h.html  chatroom__server_8h_source.html  classAcceptor-members.html  classAcceptor.html  classChannel-members.html  classChannel.html  classChatRoomServer-members.html  classChatRoomServer.html  classEventLoop-members.html  classEventLoop.html  classEventLoopThread-members.html  classEventLoopThread.html  classEventLoopThreadPool-members.html  classEventLoopThreadPool.html  classHttpServer-members.html  classHttpServer.html  classSessionManager-members.html  classSessionManager.html  classTcpConnection-members.html  classTcpConnection.html  classes.html  classprotocols_1_1RtpPacket-members.html  classprotocols_1_1RtpPacket.html  classprotocols_1_1RtspCodec-members.html  classprotocols_1_1RtspCodec.html  classprotocols_1_1WebSocketCodec-members.html  classprotocols_1_1WebSocketCodec.html  dir_41e1742e44e2de38b3bc91f993fed282.html  dir_445afa71e310fe45392ae01bc0123691.html  dir_6e245527e1dc6b5cded8d3e121312a4a.html  dir_9b32b55925d6a8b8f17cc4ed5ef7a719.html  dir_d87e636f0c6383bbff8088a94f303641.html  dir_f048310136bddd9f76f7214c1dff4965.html  event__loop_8h.html  event__loop_8h_source.html  (+75 more)
server/: CMakeLists.txt  CTestTestfile.cmake  main.cpp
server/chatroom/: chat_service.cpp  chat_service.h  chatroom_server.cpp  chatroom_server.h  session_manager.cpp  session_manager.h
server/conf/: server.yaml
server/ftp/: ftp_server.cpp  ftp_server.h  ftp_session.cpp  ftp_session.h
server/http/: http_codec.cpp  http_codec.h  http_context.h  http_server.cpp  http_server.h  http_session.cpp  http_session.h
server/include/: acceptor.h  channel.h  chat_message.h  chatroom_server.h  database_manager.h  event_loop.h  event_loop_thread.h  event_loop_thread_pool.h  http_codec.h  http_server.h  metrics_collector.h  server_config.h  server_error.h  tcp_connection.h  thread_pool.h
server/include/protocols/: rtp_rtcp.h  websocket_codec.h
server/net/: acceptor.cpp  acceptor.h  buffer.cpp  buffer.h  callbacks.h  channel.cpp  channel.h  event_fd.cpp  event_fd.h  event_loop.cpp  event_loop.h  event_loop_thread.cpp  event_loop_thread.h  event_loop_thread_pool.cpp  event_loop_thread_pool.h  inet_address.cpp  inet_address.h  poller.cpp  poller.h  protocol_detector.cpp  protocol_detector.h  protocol_session.h  signal_fd.cpp  signal_fd.h  tcp_connection.cpp  tcp_connection.h  tcp_server.cpp  tcp_server.h  timer.cpp  timer.h  timer_fd.cpp  timer_fd.h  timer_queue.cpp  timer_queue.h  timestamp.cpp  timestamp.h  udp_socket.cpp  udp_socket.h
server/net/poller/: epoll_poller.cpp  epoll_poller.h
server/rtsp/: rtsp_codec.cpp  rtsp_codec.h  rtsp_server.cpp  rtsp_server.h  rtsp_session.cpp  rtsp_session.h
server/sip/: sip_codec.cpp  sip_codec.h  sip_server.cpp  sip_server.h  sip_session.cpp  sip_session.h
server/src/: acceptor.cpp  channel.cpp  chatroom_server.cpp  database_manager.cpp  event_loop.cpp  event_loop_thread.cpp  event_loop_thread_pool.cpp  http_codec.cpp  http_server.cpp  metrics_collector.cpp  server_config.cpp  server_main.cpp  tcp_connection.cpp  thread_pool.cpp
server/src/protocols/: crypto_utils.cpp  rtsp_codec.cpp  websocket_codec.cpp
server/tests/: buffer_test.cpp  chatroom_test.cpp  event_loop_test.cpp  fd_test.cpp  inet_address_test.cpp  protocol_test.cpp  timer_test.cpp
server/utils/: crypto_utils.cpp  crypto_utils.h  json_utils.h  metrics_collector.cpp  metrics_collector.h  rate_limiter.cpp  rate_limiter.h  server_config.cpp  server_config.h  server_error.h  thread_pool.cpp  thread_pool.h
server/websocket/: websocket_codec.cpp  websocket_codec.h
tests/: CMakeLists.txt  CTestTestfile.cmake  integration_tests  integration_tests[1]_include.cmake  integration_tests[1]_tests.cmake  unit_tests  unit_tests[1]_include.cmake  unit_tests[1]_tests.cmake
tests/integration/: integration_test.cpp
tests/unit/: server_test.cpp
(+101 files in other folders)
